<resources>
    <string name="app_name">Trainer Buddy</string>
    <string name="title_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Plans">Plans</string>
    <string name="new_trainee">Add</string>
    <string name="trainee_list">List</string>
    <string name="earnings">Earnings</string>
    <string name="title_activity_trainer_settings">TrainerSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_message">hg jgc u xc hgfyfyffuy u yt yt ty tuy t uyjguy gu uyguyg uyg uy uyg uyg yu uiuyiguygy yuguyd</string>
    <string name="bumfer_offer">Bumfer Offer</string>
    <string name="_1d">1d</string>

</resources>