<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="115dp">

    <RelativeLayout
        android:id="@+id/trainerEarningsClickSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/TraineeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/grey_color"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/traineeImage"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/notification"
                    android:contentDescription="TODO" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/side_line"
                        android:layout_width="24dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/side_line_24"
                        android:contentDescription="TODO" />
                    <TextView
                        android:layout_width="24dp"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:text="@string/_1d"
                        android:textSize="7sp"
                        android:textColor="@color/white_color"
                        tools:ignore="SmallSp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="50dp"
                    android:paddingBottom="5dp"
                    android:layout_toEndOf="@+id/traineeImage"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:id="@+id/traineeNameEarning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white_color"
                        android:fontFamily="@font/cantora_one"
                        android:text="@string/bumfer_offer"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/DateTimeEarning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/traineeNameEarning"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="1dp"
                        android:textColor="@color/white_color"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/cantora_one"
                        android:text="@string/notification_message"
                        android:textSize="8sp"
                        tools:ignore="SmallSp" />
                </RelativeLayout>



            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>